--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "myfirstwebsite",
+  "homepage": "Sebasmontes2.github.io/website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
